Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9b2 (TBD)
-----------

- The readme doc has been shortened and freshened up, with a modern example for
  version 1.9.0 (#1174).
- The Geometry class now provides and looks for __geo_interface__ (#1174).
- The top level fiona module now exports Feature, Geometry, and Properties
  (#1174).
- Functions that take Feature or Geometry objects will continue to take dicts
  or objects that provide __geo_interface__ (#1177). This reverses the
  deprecation introduced in 1.9a2.
- Python ignores SIGPIPE by default. By never catching BrokenPipeError via
  `except Exception` when, for example, piping the output of rio-shapes to
  the Unix head program, we avoid getting an unhandled BrokenPipeError message
  when the interpreter shuts down (#2689).

1.9b1 (2022-12-13)
------------------

New features:

* Add listdir and listlayers method to io.MemoryFile (resolving #754).
* Add support for TIN and triangle geometries (#1163).
* Add an allow_unsupported_drivers option to fiona.open() (#1126).
* Added support for the OGR StringList field type (#1141).

Changes and bug fixes:

* Missing and unused imports have been added or removed.
* Make sure that errors aren't lost when a collection can't be saved properly
  (#1169).
* Ensure that ZipMemoryFile have the proper GDAL name after creation so that we
  can use listdir() (#1092).
* The fiona._loading module, which supports DLL loading on Windows,
  has been moved into __init__.py and is no longer used anywhere else (#1168).
* Move project metadata to pyproject.toml (#1165).
* Update drvsupport.py to reflect new format capabilities in GDAL 3.6.0
  (#1122).
* Remove debug logging from env and _env modules.

1.9a3 (2022-10-17)
------------------

Packaging:

* Builds now require Cython >= 0.29.29 because of
* https://github.com/cython/cython/issues/4609 (see #1143).
* PyPI wheels now include GDAL 3.5.2, PROJ 9.0.1, and GEOS 3.11.0.